Added sending column statistics for a GET request
